--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet">
     <title>Fabian Espitia | Software Developer</title>
 </head>
-<body class="bg-orange-100 dark:bg-slate-950">
+<body class="font-source-code-pro bg-orange-100  dark:bg-slate-950">
     <header class="sticky top-0 z-40 flex-none w-full backdrop-blur">
     <nav>
         <ul class="flex space-x-12 justify-center p-1 text-md text-gray-500 font-bold dark:text-white lg:py-2 lg:pr-3 lg:justify-end lg:space-x-6 lg:text-lg lg:dark:text-gray-400 ">
