--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,9 @@
     </header>
     <main class="mt-44 w-full">
         <h1 class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-gray-900 via-gray-900 to-black dark:bg-gradient-to-r dark:from-gray-100 dark:to-gray-300 text-7xl flex justify-center mt-16 animate-pulse lg:text-9xl lg:mt-36"> Welcome</h1>
-        <p class="text-transparent bg-clip-text bg-gradient-to-r from-gray-900 via-gray-900 to-black  dark:bg-gradient-to-r dark:from-gray-100 dark:to-gray-300 flex justify-center text-lg p-1 lg:text-2xl lg:p-2"> Fabian Espitia | Software Developer</p>
+        <p class="text-transparent bg-clip-text bg-gradient-to-r from-gray-900 via-gray-900 to-black dark:bg-gradient-to-r dark:from-gray-100 dark:to-gray-300 flex justify-center text-lg pl-11 w-full lg:text-2xl lg:p-2">
+            Fabian Espitia | Software Developer
+        </p>
         
         <section class = "mt-72" id="about"> 
             <h2  class=" text-black border-gray-500 dark:text-white text-lg font-bold mt-36 mx-9 dark:border-gray-500 border-solid border-b-4 block w-fit lg:mt-52 lg:mx-72 lg:text-2xl"> About:</h2>
