--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     <main class="mt-44 w-full">
         <h1 class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-gray-900 via-gray-900 to-black dark:bg-gradient-to-r dark:from-gray-100 dark:to-gray-300 text-7xl flex justify-center mt-16 animate-pulse lg:text-9xl lg:mt-36"> Welcome</h1>
         <p class="text-transparent bg-clip-text bg-gradient-to-r from-gray-900 via-gray-900 to-black dark:bg-gradient-to-r dark:from-gray-100 dark:to-gray-300 flex justify-center text-md px-1 w-full lg:text-2xl lg:p-2">
-            Fabian Espitia | Software Developer
+            Fabián Espitia | Software Developer
         </p>
         
         <section class = "mt-72" id="about"> 
