--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                 <li><p class= "mt-3 mx-9 lg:mx-72"> <span class=" text-black  dark:text-white text-md font-bold">(2022) MINTIC PROGRAM: </span> In 2022 I had the opportunity to be in the people group who joined in the colombia's government and Pereira's Technological University program where I learned about python fundamentals and software development with Frontend and Backend technologies.</p> </li>
                 <li><p class="mt-3 mx-9  lg:mx-72"><span class=" text-black dark:text-white text-md font-bold">(2023) LINKEDIN LEARNING AND MICROSOFT: </span> Thanks to a course that was made by Linkendin and Microsoft I got knowledge about software development professional fundamentals.</p> </li>
                 <li> <p class="mt-3 mx-9  lg:mx-72"><span class=" text-black dark:text-white text-md font-bold">(Currently) PLATZI/UDEMY/COURSERA AND OTHERS: </span> Constantly I'm learning new technical and soft skills in online platforms.</p></li>
-                <li><p class= "mt-3 mx-9  lg:mx-72"> <span class=" text-black dark:text-white text-md font-bold">(Currently) COLOMBIA'S NATIONAL UNIVERSITY: </span>  I'm studying Systems And Computing Engineering degree where I have obtained strong mathematical skills, strong data structures knowledge and strong programming fundamentals.</p> </li>
+                <li><p class= "mt-3 mx-9  lg:mx-72"> <span class=" text-black dark:text-white text-md font-bold">(Currently) NATIONAL UNIVERSITY OF COLOMBIA: </span>  I'm studying Systems And Computing Engineering degree where I have obtained strong mathematical skills, strong data structures knowledge and strong programming fundamentals.</p> </li>
             </ul>
         </section>
 
