--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
 
         <section>
             <h2 id="myProjects" class="text-black border-gray-500 dark:text-white text-lg font-bold mt-32 mx-9 dark:border-gray-500 border-solid border-b-4 block w-fit lg:mt-36 lg:mx-72 lg:text-2xl"> Projects:</h2>
-            <p class=" text-gray-900 dark:text-gray-300 text-md mt-3 mx-9 lg:mx-72 lg:text-lg"> Here will find some of my favorite projects that i have made to improve my skills and to learn new technologies. Additionally will see their respective information. </p>
+            <p class=" text-gray-900 dark:text-gray-300 text-md mt-3 mx-9 lg:mx-72 lg:text-lg"> Here will find some of my favorite projects that I have built to improve my skills and to learn new technologies. Additionally will see their respective information. </p>
             <div class="flex-col bg-amber-100 dark:bg-slate-600 w-auto mx-10 mt-5 rounded-lg lg:mx-96 lg:transition lg:duration-500 lg:hover:shadow-xl lg:dark:hover:shadow-white hover:shadow-black">
                 <div class="bg-devsposts w-auto h-32 bg-cover rounded-t-lg lg:h-56"></div>
                 <p class="text-gray-900 dark:text-gray-200 mt-2 ml-3 mb-2 mr-1"> 
