--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         
         <section class = "mt-72" id="about"> 
             <h2  class=" text-black border-gray-500 dark:text-white text-lg font-bold mt-36 mx-9 dark:border-gray-500 border-solid border-b-4 block w-fit lg:mt-52 lg:mx-72 lg:text-2xl"> About:</h2>
-            <p   class="text-gray-900 dark:text-gray-300 text-md mt-3 mx-9 lg:mx-72 lg:text-lg"> Software Developer with strong problem solving skills, strong data structures knowledge and strong mathematical skills. I have experiencie building software solutions in Frontend and Backend side using technologies as  <span class="text-black font-bold dark:text-white">HTML5 / CSS3 / TAILWIND CSS / JAVASCRIPT / REACT.JS / PYTHON / DJANGO / DJANGO REST FRAMEWORK / GO / GIN / MYSQL / POSTGRESQL / GIT and GITHUB </span>. All this thanks that I'm a learning passionate and challenges lover.</p>
+            <p   class="text-gray-900 dark:text-gray-300 text-md mt-3 mx-9 lg:mx-72 lg:text-lg"> Software Developer with strong problem solving skills, strong data structures knowledge and strong mathematical skills. I have experiencie building software solutions in Frontend and Backend side using technologies as  <span class="text-black font-bold dark:text-white">HTML5 / CSS3 / TAILWIND CSS / JAVASCRIPT / REACT.JS / PYTHON / DJANGO / DJANGO REST FRAMEWORK / GO / GIN / JAVA / Spring Framework / MYSQL / POSTGRESQL / GIT and GITHUB </span>. All this thanks that I'm a learning passionate and challenges lover.</p>
             <div class=" flex space-x-4 mt-7 ml-8 mr-12 overflow-hidden overflow-x-auto lg:space-x-12 lg:mt-9 lg:mx-72">
                 <img src="img/htmlLogo.png" class="w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
                 <img src="img/CSS3_logo.svg.png" class="w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
@@ -41,8 +41,12 @@
                 <img src="img/Python-logo-notext.svg.png" class="w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
                 <img src="img/django_original_logo_icon_146559.png" class="w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
                 <img src="img/drf-logo2.png" class="w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
+                <img src="img/go.png" class= "w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
+                <img src="img/Java-Logo.png" class= "w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
+                <img src="img/spring.png" class= "w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
                 <img src="img/Git-Icon-1788C.png" class="w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
                 <img src="img/github_git_hub_logo_icon_132878.png" class= "w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
+
             </div>
         </section>
 
