--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <title>Fabian Espitia | Software Developer</title>
 </head>
 <body class="font-source-code-pro bg-orange-100 dark:bg-slate-950">
-    
-        <header class="sticky top-0 z-40 flex-none w-full backdrop-blur">
+    <div class="container mx-auto">
+        <header class="sticky top-0 z-40 flex justify-end w-full backdrop-blur">
             <nav>
                 <ul class="flex space-x-12 justify-end p-1 text-md text-gray-500 font-bold dark:text-white lg:py-2 lg:pr-3 lg:justify-end lg:space-x-6 lg:text-lg lg:dark:text-gray-400 ">
                     <li><a href="Fabian_Resume.pdf" target="_blank" class="border-b-2 border-transparent px-1 pt-1 hover:border-gray-900 hover:text-black lg:dark:hover:border-gray-300 lg:dark:hover:text-white lg:transition lg:duration-300 ">Resume</a></li>
@@ -22,7 +22,7 @@
                 </ul>
             </nav>
         </header>
-        <div class="container mx-auto"></div>
+        
         <main class="mt-16 w-full max-w-screen-2xl mx-auto">
             <h1 class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-gray-900 via-gray-900 to-black dark:bg-gradient-to-r dark:from-gray-100 dark:to-gray-300 text-7xl flex justify-center mt-16 animate-pulse lg:text-9xl lg:mt-36"> Welcome</h1>
             <p class="text-transparent bg-clip-text bg-gradient-to-r from-gray-900 via-gray-900 to-black dark:bg-gradient-to-r dark:from-gray-100 dark:to-gray-300 flex justify-center text-md px-1 w-full lg:text-2xl lg:p-2">
