--- a/public/index.html
+++ b/public/index.html
@@ -23,13 +23,13 @@
             </nav>
         </header>
         
-        <main class="pt-36 w-full max-w-screen-2xl mx-auto">
+        <main class="pt-36 md:pt-0 w-full max-w-screen-2xl mx-auto">
             <h1 class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-gray-900 via-gray-900 to-black dark:bg-gradient-to-r dark:from-gray-100 dark:to-gray-300 text-7xl flex justify-center mt-16 animate-pulse lg:text-9xl lg:mt-36"> Welcome</h1>
             <p class="text-transparent bg-clip-text bg-gradient-to-r from-gray-900 via-gray-900 to-black dark:bg-gradient-to-r dark:from-gray-100 dark:to-gray-300 flex justify-center text-md px-1 w-full lg:text-2xl lg:p-2">
                 Fabián Espitia | Software Developer
             </p>
             
-            <section class="mt-72" id="about"> 
+            <section class="mt-72 pl-5" id="about"> 
                 <h2 class="text-black border-gray-500 dark:text-white text-lg font-bold mt-36 mx-9 dark:border-gray-500 border-solid border-b-4 block w-fit lg:mt-52 lg:mx-72 lg:text-2xl"> About:</h2>
                 <p class="text-gray-900 dark:text-gray-300 text-md mt-3 mx-9 lg:mx-72 lg:text-lg"> Software Developer with strong problem solving skills, strong data structures knowledge and strong mathematical skills. I have experience building software solutions in Frontend and Backend side using technologies as <span class="text-black font-bold dark:text-white">HTML5 / CSS3 / TAILWIND CSS / JAVASCRIPT / REACT.JS / PYTHON / DJANGO / DJANGO REST FRAMEWORK / GO / GIN / JAVA / SPRING FRAMEWORK / MYSQL / POSTGRESQL / GIT and GITHUB </span>. All this thanks to that I'm a learning passionate and challenges lover.</p>
                 <div class="flex space-x-4 mt-7 ml-8 mr-12 overflow-hidden overflow-x-auto lg:space-x-12 lg:mt-9 lg:mx-72">
@@ -50,7 +50,7 @@
                     <img src="img/github_git_hub_logo_icon_132878.png" class="w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
                 </div>
             </section>
-            <section>
+            <section class="pl-5">
                 <h2 id="education" class="text-black border-gray-500 dark:text-white text-lg font-bold mt-32 mx-9 dark:border-gray-500 border-solid border-b-4 block w-fit lg:mt-36 lg:mx-72 lg:text-2xl">Education:</h2>
                 <ul class="text-gray-900 dark:text-gray-300 text-md lg:text-lg">
                     <li><p class= "mt-3 mx-9 lg:mx-72"> <span class=" text-black  dark:text-white text-md font-bold">(2022) MINTIC PROGRAM: </span> In 2022 I had the opportunity to be in the people group who joined in the colombia's government and Technological University of Pereira program where I learned about python fundamentals and software development with Frontend and Backend technologies.</p> </li>
@@ -59,7 +59,7 @@
                     <li><p class= "mt-3 mx-9  lg:mx-72"> <span class=" text-black dark:text-white text-md font-bold">(Currently) NATIONAL UNIVERSITY OF COLOMBIA: </span>  I'm studying Systems And Computing Engineering degree where I have obtained strong mathematical skills, strong data structures knowledge and strong programming fundamentals.</p> </li>
                 </ul>
             </section>
-            <section>
+            <section class="pl-5">
                 <h2 id="myProjects" class="text-black border-gray-500 dark:text-white text-lg font-bold mt-32 mx-9 dark:border-gray-500 border-solid border-b-4 block w-fit lg:mt-36 lg:mx-72 lg:text-2xl"> Projects:</h2>
                 <p class=" text-gray-900 dark:text-gray-300 text-md mt-3 mx-9 lg:mx-72 lg:text-lg"> Here will find some of my favorite projects that I have built to improve my skills and to learn new technologies. Additionally will see their respective information. </p>
                 <div class="flex-col bg-amber-100 dark:bg-slate-600 w-auto mx-10 mt-5 rounded-lg lg:mx-96 lg:transition lg:duration-500 lg:hover:shadow-xl lg:dark:hover:shadow-white hover:shadow-black">
