--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
         <header class="sticky top-0 z-40 flex justify-end w-full backdrop-blur">
             <nav>
                 <ul class="flex space-x-12 justify-end p-1 text-md text-gray-500 font-bold dark:text-white lg:py-2 lg:pr-3 lg:justify-end lg:space-x-6 lg:text-lg lg:dark:text-gray-400 ">
-                    <li><a href="fabian_resume.pdf" target="_blank" class="border-b-2 border-transparent px-1 pt-1 hover:border-gray-900 hover:text-black lg:dark:hover:border-gray-300 lg:dark:hover:text-white lg:transition lg:duration-300 ">Resume</a></li>
+                    <li><a href="Fabian_Resume.pdf" target="_blank" class="border-b-2 border-transparent px-1 pt-1 hover:border-gray-900 hover:text-black lg:dark:hover:border-gray-300 lg:dark:hover:text-white lg:transition lg:duration-300 ">Resume</a></li>
                     <li><a class="border-b-2 border-transparent px-1 pt-1 hover:border-gray-900 hover:text-black lg:dark:hover:border-gray-300 lg:dark:hover:text-white lg:transition lg:duration-300 " href="#">Home</a></li>
                     <li><a class="border-b-2 border-transparent px-1 pt-1 hover:border-gray-900 hover:text-black lg:dark:hover:border-gray-300 lg:dark:hover:text-white lg:transition lg:duration-300" href="#contact">Contact</a></li>
                     <button id="cambia" class=" bg-amber-400 hover:bg-indigo-700 dark:bg-indigo-700 rounded-lg w-7 h-7 transition duration-300 dark:hover:bg-amber-400"> <img id="icono" src="img/moon-removebg-preview.png" alt="Sun"></button>
