socket conn descreption modified again

--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
                         system in a text (.txt) file using socket-based connection.
                         The core concept is to enable different devices or
                         programs to connect and collaboratively perform word
-                        searches in a shared file. The technology that was used to built this web site is <span class="text-black font-bold dark:text-white">PYTHON.</span> You can check the code on <span class="font-bold transition duration-300 hover:text-indigo-400"><a  href="https://github.com/FabianEspitia-it/Socket_connection" target="_blank">GITHUB</a></span></p>
+                        searches in a shared file. The technology that was used to built this project is <span class="text-black font-bold dark:text-white">PYTHON.</span> You can check the code on <span class="font-bold transition duration-300 hover:text-indigo-400"><a  href="https://github.com/FabianEspitia-it/Socket_connection" target="_blank">GITHUB</a></span></p>
                 </div>
             </section>
         </main>
