--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap" rel="stylesheet">
-    <title>Fabian Espitia | Software Developer</title>
+    <title>Fabian Espitia | Software Engineer</title>
 </head>
 <body class="font-source-code-pro bg-orange-100 dark:bg-slate-950">
     <div class="container mx-auto">
@@ -26,12 +26,12 @@
         <main class="pt-36 md:pt-0 w-full max-w-screen-xl mx-auto">
             <h1 class="font-bold text-transparent bg-clip-text bg-gradient-to-r from-gray-900 via-gray-900 to-black dark:bg-gradient-to-r dark:from-gray-100 dark:to-gray-300 text-7xl flex justify-center mt-16 animate-pulse lg:text-9xl lg:mt-36"> Welcome</h1>
             <p class="text-transparent bg-clip-text bg-gradient-to-r from-gray-900 via-gray-900 to-black dark:bg-gradient-to-r dark:from-gray-100 dark:to-gray-300 flex justify-center text-md px-1 w-full lg:text-2xl lg:p-2">
-                Fabián Espitia | Software Developer
+                Fabián Espitia | Software Engineer
             </p>
             
             <section class="mt-72 md:pl-5" id="about"> 
                 <h2 class="text-black border-gray-500 dark:text-white text-lg font-bold mt-36 mx-9 dark:border-gray-500 border-solid border-b-4 block w-fit lg:mt-52 lg:mx-72 lg:text-2xl"> About:</h2>
-                <p class="text-gray-900 dark:text-gray-300 text-md mt-3 mx-9 lg:mx-72 lg:text-lg"> Software Developer with strong problem solving skills, strong data structures knowledge and strong mathematical skills. I have experience building software solutions in Frontend and Backend side using technologies as <span class="text-black font-bold dark:text-white">HTML5 / CSS3 / TAILWIND CSS / JAVASCRIPT / REACT.JS / PYTHON / FASTAPI / DJANGO / DJANGO REST FRAMEWORK / GO / GIN / JAVA / SPRING FRAMEWORK / MYSQL / POSTGRESQL / GOOGLE CLOUD / GIT and GITHUB </span>. All this thanks to that I'm a learning passionate and challenges lover.</p>
+                <p class="text-gray-900 dark:text-gray-300 text-md mt-3 mx-9 lg:mx-72 lg:text-lg"> Software Engineer with strong problem-solving skills, strong data structures knowledge, and strong mathematical skills. I have experience building software solutions in Frontend, Backend, and AI using technologies such as <span class="text-black font-bold dark:text-white">HTML5 / CSS3 / TAILWIND CSS / JAVASCRIPT / REACT.JS / PYTHON / FASTAPI / LANGCHAIN / CREWAI / LANGGRAPH / OPENAI API / DJANGO / DJANGO REST FRAMEWORK / GO / GIN / JAVA / SPRING FRAMEWORK / MYSQL / POSTGRESQL / GOOGLE CLOUD / GIT and GITHUB</span>. All this thanks to my passion for learning and love for challenges.</p>
                 <div class="flex space-x-4 mt-7 ml-8 mr-12 overflow-hidden overflow-x-auto lg:space-x-12 lg:mt-9 lg:mx-72">
                     <img src="img/htmlLogo.png" class="w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
                     <img src="img/CSS3_logo.svg.png" class="w-24 h-24 transition duration-500 hover:-translate-y-3 lg:w-32 lg:h-32" alt="">
@@ -55,7 +55,8 @@
             <section class="md:pl-5">
                 <h2 id="experience" class="text-black border-gray-500 dark:text-white text-lg font-bold mt-32 mx-9 dark:border-gray-500 border-solid border-b-4 block w-fit lg:mt-36 lg:mx-72 lg:text-2xl">Experience:</h2>
                 <ul class="text-gray-900 dark:text-gray-300 text-md lg:text-lg">
-                    <li><p class= "mt-3 mx-9 lg:mx-72"> <span class=" text-black  dark:text-white text-md font-bold">(2024 March - Currently) MAKERS FELLOWSHIP: </span> As a Software Developer, I designed products and scripts for internal use and implemented automations in Airtable to enhance team efficiency by streamlining workflows. I also participated in recruitment interviews to identify talent aligned with our goals. Additionally, as president of the Code Ambassadors, I promoted the expansion of Makers in Latin America, fostering partnerships and building a vibrant community of developers.</p> </li>
+                    <li><p class= "mt-3 mx-9 lg:mx-72"> <span class=" text-black  dark:text-white text-md font-bold">(2024 October - Currently) TALLY LEGAL: </span> As a Software Engineer, I developed various software products aimed at automating manual tasks across different teams, significantly improving operational efficiency. Many of these solutions incorporated AI technologies, including chatbots and intelligent agents, to enhance automation and decision-making processes.</p> </li>
+                    <li><p class= "mt-3 mx-9 lg:mx-72"> <span class=" text-black  dark:text-white text-md font-bold">(2024 March - October) MAKERS FELLOWSHIP: </span> As a Software Developer, I designed products and scripts for internal use and implemented automations in Airtable to enhance team efficiency by streamlining workflows. I also participated in recruitment interviews to identify talent aligned with our goals. Additionally, as president of the Code Ambassadors, I promoted the expansion of Makers in Latin America, fostering partnerships and building a vibrant community of developers.</p> </li>
                     <li><p class="mt-3 mx-9  lg:mx-72"><span class=" text-black dark:text-white text-md font-bold">(2024 June - September ) COLOMBIA TECH WEEK: </span> I worked as a backend developer, leading the development of a matchmaking platform that connected over 1.000 users, including top investment funds and startups. This platform enabled mutual selection for better matches between investors and entrepreneurs.
 
                         We also integrated a Learning Management System (LMS) with two capital-raising courses designed for startups, equipping them with essential fundraising skills. My role included coding the backend and collaborating with cross-functional teams to ensure a seamless user experience.</p> </li>
@@ -68,10 +69,10 @@
             <section class="md:pl-5">
                 <h2 id="education" class="text-black border-gray-500 dark:text-white text-lg font-bold mt-32 mx-9 dark:border-gray-500 border-solid border-b-4 block w-fit lg:mt-36 lg:mx-72 lg:text-2xl">Education:</h2>
                 <ul class="text-gray-900 dark:text-gray-300 text-md lg:text-lg">
-                    <li><p class= "mt-3 mx-9 lg:mx-72"> <span class=" text-black  dark:text-white text-md font-bold">(2022) MINTIC PROGRAM: </span> In 2022 I had the opportunity to be in the people group who joined in the colombia's government and Technological University of Pereira program where I learned about python fundamentals and software development with Frontend and Backend technologies.</p> </li>
-                    <li><p class="mt-3 mx-9  lg:mx-72"><span class=" text-black dark:text-white text-md font-bold">(2023) LINKEDIN LEARNING AND MICROSOFT: </span> Thanks to a course that was made by Linkedin and Microsoft I got knowledge about software development professional fundamentals.</p> </li>
+                    <li><p class= "mt-3 mx-9  lg:mx-72"> <span class=" text-black dark:text-white text-md font-bold">(Currently) NATIONAL UNIVERSITY OF COLOMBIA: </span>  I'm studying Systems And Computer Engineering degree where I have obtained strong mathematical skills, strong data structures knowledge and strong programming fundamentals.</p> </li>
                     <li> <p class="mt-3 mx-9  lg:mx-72"><span class=" text-black dark:text-white text-md font-bold">(Currently) PLATZI/UDEMY/COURSERA AND OTHERS: </span> Constantly I'm learning new technical and soft skills in online platforms.</p></li>
-                    <li><p class= "mt-3 mx-9  lg:mx-72"> <span class=" text-black dark:text-white text-md font-bold">(Currently) NATIONAL UNIVERSITY OF COLOMBIA: </span>  I'm studying Systems And Computing Engineering degree where I have obtained strong mathematical skills, strong data structures knowledge and strong programming fundamentals.</p> </li>
+                    <li><p class="mt-3 mx-9  lg:mx-72"><span class=" text-black dark:text-white text-md font-bold">(2023) LINKEDIN LEARNING AND MICROSOFT: </span> Thanks to a course that was made by Linkedin and Microsoft I got knowledge about software development professional fundamentals.</p> </li>
+                    <li><p class= "mt-3 mx-9 lg:mx-72"> <span class=" text-black  dark:text-white text-md font-bold">(2022) MINTIC PROGRAM: </span> In 2022 I had the opportunity to be in the people group who joined in the colombia's government and Technological University of Pereira program where I learned about python fundamentals and software development with Frontend and Backend technologies.</p> </li>
                 </ul>
             </section>
 
