add naurat project

--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,11 @@
                 <h2 id="myProjects" class="text-black border-gray-500 dark:text-white text-lg font-bold mt-32 mx-9 dark:border-gray-500 border-solid border-b-4 block w-fit lg:mt-36 lg:mx-72 lg:text-2xl"> Projects:</h2>
                 <p class=" text-gray-900 dark:text-gray-300 text-md mt-3 mx-9 lg:mx-72 lg:text-lg"> Here will find some of my favorite projects that I have built to improve my skills and to learn new technologies. Additionally will see their respective information. </p>
                 <div class="flex-col bg-amber-100 dark:bg-slate-600 w-auto mx-10 mt-5 rounded-lg lg:mx-96 lg:transition lg:duration-500">
+                    <div class="bg-naurat w-auto h-32 bg-cover rounded-t-lg lg:h-56"></div>
+                    <p class="text-gray-900 dark:text-gray-200 mt-2 ml-3 mb-2 mr-1"> Naurat is an AI-powered project designed to help non-technical users uncover the hidden value in their data. My contributions focused on developing an AI capable of interpreting natural language and translating it into SQL queries for relational databases such as MySQL and PostgreSQL, as well as handling Excel and CSV files. The agent then delivers the requested information back to the user in natural language, making data exploration intuitive and accessible without writing a single line of code.
+                    You can check the project on the <span class="font-bold transition duration-300 hover:text-indigo-400"><a  href="https://naurat.com" target="_blank">WEBSITE.</a></span></p>
+                </div>
+                <div class="flex-col bg-amber-100 dark:bg-slate-600 w-auto mx-10 mt-5 rounded-lg lg:mx-96 lg:transition lg:duration-500">
                     <div class="bg-spotinet w-auto h-32 bg-cover rounded-t-lg ease-in lg:h-56"></div>
                     <p class="text-gray-900 dark:text-gray-200 mt-2 ml-3 mb-2 mr-1"> Spotinet is a platform that allows users and vendors to
                         obtain login codes for their accounts quickly and
@@ -91,14 +96,6 @@
                     <div class="bg-entrepreneurial w-auto h-32 bg-cover rounded-t-lg lg:h-56"></div>
                     <p class="text-gray-900 dark:text-gray-200 mt-2 ml-3 mb-2 mr-1"> 
                         Entrepreneurial Investing is dedicated to providing educational resources and tools for individuals interested in investing in startups. Our goal is to empower aspiring investors with the knowledge and skills they need to make informed decisions and succeed in the world of startup investing. This website was built with <span class="text-black font-bold dark:text-white">NEXT.JS and TAILWIND CSS.</span> You can check the code on <span class="font-bold transition duration-300 hover:text-indigo-400"><a  href="https://github.com/FabianEspitia-it/Entrepreneurial-Investing-WebSite" target="_blank">GITHUB</a></span> </p>
-                </div>
-                <div class="flex-col bg-amber-100 dark:bg-slate-600 w-auto mx-10 mt-5 rounded-lg lg:mx-96 lg:transition lg:duration-500">
-                    <div class="bg-coding w-auto h-32 bg-cover rounded-t-lg lg:h-56"></div>
-                    <p class="text-gray-900 dark:text-gray-200 mt-2 ml-3 mb-2 mr-1"> Socket Connection focuses on developing an efficient word search
-                        system in a text (.txt) file using socket-based connection.
-                        The core concept is to enable different devices or
-                        programs to connect and collaboratively perform word
-                        searches in a shared file. The technology that was used to built this project is <span class="text-black font-bold dark:text-white">PYTHON.</span> You can check the code on <span class="font-bold transition duration-300 hover:text-indigo-400"><a  href="https://github.com/FabianEspitia-it/Socket_connection" target="_blank">GITHUB</a></span></p>
                 </div>
             </section>
         </main>
